--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@tabler/icons-vue": "^2.11.0",
+    "@tabler/icons-webfont": "^2.22.0",
     "@unhead/ssr": "^1.1.23",
     "@vueuse/core": "^9.13.0",
     "@vueuse/head": "^1.1.23",
     "axios": "^1.3.4",
     "collect.js": "^4.34.3",
-    "daisyui": "^2.51.5",
     "firebase": "^9.19.1",
     "intus": "^0.0.4",
     "maska": "^2.1.8",
@@ -33,6 +33,7 @@
     "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue": "^4.1.0",
     "autoprefixer": "^10.4.14",
+    "daisyui": "^3.1.1",
     "naive-ui": "^2.34.3",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
